--- a/index.html
+++ b/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html>
 <body style="background-color:hotpink; font-family: cursive;">
-    
-header {
-  background-color: #666;
-  padding: 30px;
-  text-align: center;
-  font-size: 35px;
-  color: white;
-}
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<meta charset="UTF-8">
 
-<h1 style="color: white;">Bababooey</h1>
-<h2 style="color: white;">microwave go</h2>
-<h3 style="color: white;">MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM</h3>
+
+
+<div style = "position:absolute; left:540px; top:20px; ">
+  
+
+
+<h1 style="color: white;font-family: cursive;">bababooey</h1>
+<h2 style="color: white;font-family: cursive;">microwave go</h2>
+<h3 style="color: white;font-family: cursive;">MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM</h3>
 <hr>
+</div>
 
+<div style = "position: absolute; left:50px; top:250px"> 
 <img src="https://i.redd.it/x6m0ir421uy41.jpg" width="450" height="600">
+</div>
+
+  <div style="position: absolute; top: 850px; left:200px;">
+    <h2 style="color: white;font-family: cursive;" >big man!!!1!</h2>
+  </div>
 
 <a href="https://www.youtube.com/channel/UC4sxB7lQ17CKRpFQpntloRg">twomad</a>
 <a href="https://www.youtube.com/channel/UC4sxB7lQ17CKRpFQpntloRg">twomad</a>
@@ -37,39 +44,58 @@ header {
 <a href="https://www.youtube.com/channel/UC4sxB7lQ17CKRpFQpntloRg">twomad</a>
 <a href="https://www.youtube.com/channel/UC4sxB7lQ17CKRpFQpntloRg">twomad</a>
 <a href="https://www.youtube.com/channel/UC4sxB7lQ17CKRpFQpntloRg">twomad</a>
+<a href="https://www.youtube.com/channel/UC4sxB7lQ17CKRpFQpntloRg">twomad</a>
+<a href="https://www.youtube.com/channel/UC4sxB7lQ17CKRpFQpntloRg">twomad</a>
+<a href="https://www.youtube.com/channel/UC4sxB7lQ17CKRpFQpntloRg">twomad</a>
+<a href="https://www.youtube.com/channel/UC4sxB7lQ17CKRpFQpntloRg">twomad</a>
+<a href="https://www.youtube.com/channel/UC4sxB7lQ17CKRpFQpntloRg">twomad</a>
+<a href="https://www.youtube.com/channel/UC4sxB7lQ17CKRpFQpntloRg">twomad</a>
+<a href="https://www.youtube.com/channel/UC4sxB7lQ17CKRpFQpntloRg">twomad</a>
+<a href="https://www.youtube.com/channel/UC4sxB7lQ17CKRpFQpntloRg">twomad</a>
+<a href="https://www.youtube.com/channel/UC4sxB7lQ17CKRpFQpntloRg">twomad</a>
+<a href="https://www.youtube.com/channel/UC4sxB7lQ17CKRpFQpntloRg">twomad</a>
+<a href="https://www.youtube.com/channel/UC4sxB7lQ17CKRpFQpntloRg">twomad</a>
+<a href="https://www.youtube.com/channel/UC4sxB7lQ17CKRpFQpntloRg">twomad</a>
 
-<p style="color: white;" >big man!!!1!</p>
-hr>
+
+
+<div style="position: absolute; left:1400px; top:500px;">
 <video width="320" height="240" controls>
     <source src="C:\Users\bryan\Videos\samwich.mp4" type="video/mp4">
     <source src="C:\Users\bryan\Videos\samwich.mp4" type="video/mp4">
   </video>
-  <hr>
-  <h3 style="color: white;">AYO SAMWICH NOM NOM NOM NOM NOM NOM NOM NOM</h3>
-  <img src="https://media1.tenor.com/images/08fbfb383d1cee556b510ab1451ffdb2/tenor.gif?itemid=18410865" width="322" height="498">
+</div>
   
-  <table style="width:100%">
-    <tr>
-      <th>two</th>
-      <th>mad</th> 
-      <th>360</th>
-    </tr>
-    <tr>
-      <td>mr</td>
-      <td>wtomad</td>
-      <td>hi</td>
-    </tr>
-    <tr>
-      <td>wiggle</td>
-      <td>Jackson</td>
-      <td>michael</td>
-    </tr>
-    <tr>
-      <td>woop</td>
-      <td>woop</td>
-      <td>bonk</td>
-    </tr>
-  </table>
+<div style="position: absolute; left: 1300px; top:750px">
+  <h3 style="color: white;font-family: cursive;">AYO SAMWICH NOM NOM NOM NOM NOM NOM NOM NOM</h3>
+</div>
   
+
+  <div style = "position: absolute; left:50px; top:1000px;"> 
+    <img src="https://media1.tenor.com/images/08fbfb383d1cee556b510ab1451ffdb2/tenor.gif?itemid=18410865" width="322" height="498">
+    </div>
+    
+    <div style = "position: absolute; left:375px; top:1300px;"> 
+  <p>	&#128514; 	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;	&#128514;</p>
+  </div>
+ 
+  <figure>
+    <figcaption>korea misail luanch:</figcaption>
+    <audio
+        controls
+        src="C:\Users\bryan\Music\gangam.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio>
+</figure>
+
+<div style=" position:absolute; left:800px; top:1200px;">
+<img src="https://i.ytimg.com/vi/Ntr0htkSA4Q/maxresdefault.jpg" width="200" height="400">
+</div>
+
+<div style=" position:absolute; left:600px; top:400px;">
+  <img src="https://media.tenor.com/images/c14522d0f1607568e271b9a4a54b6b1d/tenor.gif" width="500" height="500">
+  </div>
+
 </body>
 </html>
