--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
 <div style="position: absolute; left:1400px; top:500px;">
 <video width="320" height="240" controls>
-    <source src="C:\Users\bryan\Videos\samwich.mp4" type="video/mp4">
-    <source src="C:\Users\bryan\Videos\samwich.mp4" type="video/mp4">
+    <source src="samwich.mp4" type="video/mp4">
+    <source src="samwich.mp4" type="video/mp4">
   </video>
 </div>
   
@@ -83,7 +83,7 @@
     <figcaption>korea misail luanch:</figcaption>
     <audio
         controls
-        src="C:\Users\bryan\Music\gangam.mp3">
+        src="gangam.mp3">
             Your browser does not support the
             <code>audio</code> element.
     </audio>
