--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
 <div style="position: absolute; left:1400px; top:500px;">
 <video width="320" height="240" controls>
-    <source src="samwich.mp4" type="video/mp4">
-    <source src="samwich.mp4" type="video/mp4">
+    <source src="C:\Users\bryan\Videos\samwich.mp4" type="video/mp4">
+    <source src="C:\Users\bryan\Videos\samwich.mp4" type="video/mp4">
   </video>
 </div>
   
@@ -83,7 +83,7 @@
     <figcaption>korea misail luanch:</figcaption>
     <audio
         controls
-        src="gangam.mp3">
+        src="C:\Users\bryan\Music\gangam.mp3">
             Your browser does not support the
             <code>audio</code> element.
     </audio>
@@ -97,5 +97,8 @@
   <img src="https://media.tenor.com/images/c14522d0f1607568e271b9a4a54b6b1d/tenor.gif" width="500" height="500">
   </div>
 
+  <div style="position: absolute; left:140px; top:490px;"> 
+  <a href="https://sacred-texts.com/index.htm"> this is the way</a>
+  </div>
 </body>
 </html>
