--- a/index.html
+++ b/index.html
@@ -100,5 +100,16 @@
   <div style="position: absolute; left:140px; top:490px;"> 
   <a href="https://sacred-texts.com/index.htm"> this is the way</a>
   </div>
+
+<div style="position: absolute; left: 1200px; top: 800px;">
+<img src="‪elephant.png" width="100" height="100">
+</div>
+<div style="position: absolute; left:1170px; top:900px;"> 
+  <a href="https://sacred-texts.com/index.htm"> enter the third temple</a>
+  </div>
+
+
+
+
 </body>
 </html>
