--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   </div>
 
 <div style="position: absolute; left: 1200px; top: 800px;">
-<img src="‪elephant.png" width="100" height="100">
+<img src="‪elephant.jpg" width="100" height="100">
 </div>
 <div style="position: absolute; left:1170px; top:900px;"> 
   <a href="https://sacred-texts.com/index.htm"> enter the third temple</a>
