--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   </div>
 
 <div style="position: absolute; left: 1200px; top: 800px;">
-<img src="‪elephant.jpg" width="100" height="100">
+<img src="https://ih1.redbubble.net/image.1715659672.7639/pp,840x830-pad,1000x1000,f8f8f8.jpg" width="100" height="100">
 </div>
 <div style="position: absolute; left:1170px; top:900px;"> 
   <a href="https://sacred-texts.com/index.htm"> enter the third temple</a>
