--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
 
 
 
-<div style="position: absolute; left:1400px; top:500px;">
+<div style="position: absolute; right:200px; top:500px;">
 <video width="320" height="240" controls>
     <source src="samwich.mp4" type="video/mp4">
     <source src="samwich.mp4" type="video/mp4">
   </video>
 </div>
   
-<div style="position: absolute; left: 1300px; top:750px">
+<div style="position: absolute; right: 50px; top:750px">
   <h3 style="color: white;font-family: cursive;">AYO SAMWICH NOM NOM NOM NOM NOM NOM NOM NOM</h3>
 </div>
   
@@ -101,10 +101,10 @@
   <a href="https://sacred-texts.com/index.htm"> this is the way</a>
   </div>
 
-<div style="position: absolute; left: 1200px; top: 800px;">
+<div style="position: absolute; right: 600px; top: 800px;">
 <img src="https://ih1.redbubble.net/image.1715659672.7639/pp,840x830-pad,1000x1000,f8f8f8.jpg" width="100" height="100">
 </div>
-<div style="position: absolute; left:1170px; top:900px;"> 
+<div style="position: absolute; right:570px; top:900px;"> 
   <a href="https://templeos.org/"> enter the third temple</a>
   </div>
 
