--- a/index.html
+++ b/index.html
@@ -108,6 +108,13 @@
   <a href="https://templeos.org/"> enter the third temple</a>
   </div>
 
+<div style="position: absolute;left:243px; top:798px;">
+<img src="https://imgur.com/r/beards/pPd97Ws" width="200" height="500">
+</div>
+
+<div style="position: absolute;left:243px; top:820px;">
+<a href="bristlr.com">you like beard</a>
+</div>
 
 
 
