--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 </div>
 
 <div style="position: absolute;left:1243px; top:820px;">
-<a href="https://bristlr.com/">you like beard?</a>
+<a href="bristlr.com">you like beard?</a>
 </div>
 
 
