--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <body>
 
-<img src="https://media1.tenor.com/images/08fbfb383d1cee556b510ab1451ffdb2/tenor.gif?itemid=18410865" width="screen.width" height="screen.height">
+<img src="https://media1.tenor.com/images/08fbfb383d1cee556b510ab1451ffdb2/tenor.gif?itemid=18410865" width="device.width" height="device.height">
 
 
 
