--- a/index.html
+++ b/index.html
@@ -2,7 +2,17 @@
 <html>
     <body>
 
-<img src="https://media1.tenor.com/images/08fbfb383d1cee556b510ab1451ffdb2/tenor.gif?itemid=18410865" width="device.width" height="device.height">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+        div {
+          width: 100%;
+          height: 400px;
+          background-image: url('img_flowers.jpg');
+          background-repeat: no-repeat;
+          background-size: contain;
+          border: 1px solid red;
+        }
+        </style>
 
 
 
