--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         div {
           width: 100%;
           height: 400px;
-          background-image: url('img_flowers.jpg');
+          background-image: url('https://i.redd.it/p26dj110djo41.jpg');
           background-repeat: no-repeat;
           background-size: contain;
           border: 1px solid red;
