--- a/index.html
+++ b/index.html
@@ -1,25 +1,23 @@
-<!DOCTYPE HTML>
-<html>
-    <body>
 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <style>
-        div {
-          width: 100%;
-          height: 400px;
-          background-image: url('https://i.redd.it/p26dj110djo41.jpg');
-          background-repeat: no-repeat;
-          background-size: contain;
-          border: 1px solid red;
-        }
-        </style>
+<DOCTYPE html>
 
-
-
-
-
-
-
+  <html>
+  <head>
+    <title>corn :)</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  
+   <body>
+      <h1>
+         CORN
+       </h1>
+    <iframe width="560" height="315" src="https://i.redd.it/p26dj110djo41.jpga
+     /iframe>
+    <h1>
+      CORN
+    </h1>
+   </body>
+  
+  </html>
 
 
 
@@ -28,6 +26,10 @@
 
 
 
+
+
+
+https://i.redd.it/p26dj110djo41.jpga
 
 
 
