--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
       <h1>
          CORN
        </h1>
-    <iframe width="560" height="315" src="https://i.redd.it/p26dj110djo41.jpga
-     /iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/j8qp3ITVqY0" frameborder="0"
+    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <h1>
       CORN
     </h1>
    </body>
   
   </html>
-
-
+  
 
 
 
