--- a/index.html
+++ b/index.html
@@ -1,24 +1,8 @@
+<!DOCTYPE HTML>
+<html>
+    <body>
 
-<DOCTYPE html>
-
-  <html>
-  <head>
-    <title>corn :)</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-  
-   <body>
-      <h1>
-         CORN
-       </h1>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/j8qp3ITVqY0" frameborder="0"
-    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <h1>
-      CORN
-    </h1>
-   </body>
-  
-  </html>
-  
+       <div style="background-image: url('https://i.redd.it/p26dj110djo41.jpg');"></div>
 
 
 
@@ -28,7 +12,12 @@
 
 
 
-https://i.redd.it/p26dj110djo41.jpga
+
+https://i.redd.it/p26dj110djo41.jpg
+
+
+
+
 
 
 
