--- a/index.html
+++ b/index.html
@@ -1,19 +1,11 @@
 <!DOCTYPE HTML>
 <html>
-    <body>
-
-       <div style="background-image: url('https://i.redd.it/p26dj110djo41.jpg');"></div>
-
-
-
-
-
-
-
-
-
-
-https://i.redd.it/p26dj110djo41.jpg
+<head>
+<body>
+  body {
+    background-image: url('https://i.redd.it/p26dj110djo41.jpg');
+  }
+     
 
 
 
@@ -28,5 +20,15 @@ https://i.redd.it/p26dj110djo41.jpg
 
 
 
-    </body>
+
+
+
+
+
+
+
+
+
+</body>
+</head>
 </html>
