--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html>
 <head>
 <body>
-  body {
-    background-image: url('https://i.redd.it/p26dj110djo41.jpg');
-  }
-     
+  <link rel="stylesheet" href="mystyle.css">
 
 
 
