--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+  <style>
+    IMG.displayed {
+    display: block;
+    margin-left: auto;
+    margin-right: auto }
+  </style>
 <body>
   <link rel="stylesheet" href="mystyle.css">
+
+  <IMG class="displayed" src="https://pbs.twimg.com/media/EUx-P0iUUAAF7Ky.jpg" alt="https://pbs.twimg.com/media/EUx-P0iUUAAF7Ky.jpg">
 
 
 
