--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <link rel="stylesheet" href="mystyle.css">
 
-  <IMG class="displayed" src="https://pbs.twimg.com/media/EUx-P0iUUAAF7Ky.jpg" alt="https://pbs.twimg.com/media/EUx-P0iUUAAF7Ky.jpg">
+  <IMG class="displayed" src="https://pbs.twimg.com/media/EUx-P0iUUAAF7Ky.jpg" width="100px" height="100px">
 
 
 
