--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@
     IMG.displayed {
     display: block;
     margin-left: auto;
-    margin-right: auto }
+    margin-right: auto
+   }
+   DIV.container {
+    min-height: 10em;
+    display: table-cell;
+    vertical-align: middle }
+
   </style>
 <body>
   <link rel="stylesheet" href="mystyle.css">
 
+  <div class="container">
   <IMG class="displayed" src="https://pbs.twimg.com/media/EUx-P0iUUAAF7Ky.jpg" width="100px" height="100px">
-
+  </div>
 
 
 
