--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
 <html>
 <head>
   <style>
-    IMG.displayed {
-    display: block;
-    margin-left: auto;
-    margin-right: auto
+      #Outer { 
+            border: 2px solid black; 
+            height: 300px; 
+            position: relative; 
+        } 
+        img { 
+            position: absolute; 
+            margin: auto; 
+            top: 0; 
+            left: 0; 
+            right: 0; 
+            bottom: 0; 
+        } 
    }
    
   </style>
@@ -13,7 +22,11 @@
   <link rel="stylesheet" href="mystyle.css">
 
   
-  <IMG class="displayed" src="https://pbs.twimg.com/media/EUx-P0iUUAAF7Ky.jpg" width="100px" height="100px">
+  
+    <div id = "Outer"> 
+        <img src= 
+"https://pbs.twimg.com/media/EUx-P0iUUAAF7Ky.jpg"/> 
+    </div> 
 
 
 
