--- a/index.html
+++ b/index.html
@@ -2,31 +2,18 @@
 <html>
 <head>
   <style>
-      #Outer { 
-            border: 2px solid black; 
-            height: 300px; 
-            position: relative; 
-        } 
-        img { 
-            position: absolute; 
-            margin: auto; 
-            top: 0; 
-            left: 0; 
-            right: 0; 
-            bottom: 0; 
-        } 
+    IMG.displayed {
+    display: block;
+    margin-left: auto;
+    margin-right: auto
    }
-   
   </style>
 <body>
   <link rel="stylesheet" href="mystyle.css">
 
   
-  
-    <div id = "Outer"> 
-        <img src= 
-"https://pbs.twimg.com/media/EUx-P0iUUAAF7Ky.jpg"/> 
-    </div> 
+  <IMG class="displayed" src="https://pbs.twimg.com/media/EUx-P0iUUAAF7Ky.jpg" width="100px" height="100px">
+
 
 
 
