--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     IMG.displayed {
     display: block;
     margin-left: auto;
-    margin-right: auto
+    margin-right: auto;
+    margin-top:auto ;
+    margin-bottom:auto ;
    }
   </style>
 <body>
