--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
   <link rel="stylesheet" href="mystyle.css">
 
-  
+  <div style="position: absolute; top: 500px;">
   <IMG class="displayed" src="https://pbs.twimg.com/media/EUx-P0iUUAAF7Ky.jpg" width="100px" height="100px">
-
+  </div>
 
 
 
