--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top:auto ;
-    margin-bottom:auto ;
+    position: absolute; top: 500px;
    }
   </style>
 <body>
   <link rel="stylesheet" href="mystyle.css">
 
-  <div style="position: absolute; top: 500px;">
+
   <IMG class="displayed" src="https://pbs.twimg.com/media/EUx-P0iUUAAF7Ky.jpg" width="100px" height="100px">
-  </div>
+  
 
 
 
