--- a/index.html
+++ b/index.html
@@ -6,15 +6,23 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    position: absolute; top: 500px;
+    position: relative; top: 300px;
+    
    }
   </style>
 <body>
   <link rel="stylesheet" href="mystyle.css">
 
+ 
+ 
 
-  <IMG class="displayed" src="https://pbs.twimg.com/media/EUx-P0iUUAAF7Ky.jpg" width="100px" height="100px">
-  
+    <div style="position: relative; top:300px; text-align: center;">
+    <a href="https://komikage.github.io/boring/">
+    <img border="0" alt="bababooey" src="https://lh3.googleusercontent.com/proxy/CYiiacUQ3WCgCFrsEQlxHSkjpQlzvTrxNMLRV-QqUb_S9X42ph0Yf0zjz9lOxf9p8X-oS7A7Ljst0iT4slSS6yKLeSyPHJb1tWEPtDMrPzOfCDzxvgBuO0hcZyLuvC8Dig"
+    width="300" height="200">
+    </a>
+    </div>
+   
 
 
 
