--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+
+<title>main</title>
   <style>
+
+    .WebContainer{
+  width:100%;
+  height:auto;  
+}
     IMG.displayed {
     display: block;
     margin-left: auto;
     margin-right: auto;
     position: relative; top: 300px;
-    
    }
   </style>
 <body>
@@ -17,8 +23,8 @@
  
 
     <div style="position: relative; top:300px; text-align: center;">
-    <a href="https://komikage.github.io/boring/">
-    <img border="0" alt="bababooey" src="https://lh3.googleusercontent.com/proxy/CYiiacUQ3WCgCFrsEQlxHSkjpQlzvTrxNMLRV-QqUb_S9X42ph0Yf0zjz9lOxf9p8X-oS7A7Ljst0iT4slSS6yKLeSyPHJb1tWEPtDMrPzOfCDzxvgBuO0hcZyLuvC8Dig"
+    <a href="https://komikage.github.io/red1/">
+    <img border="0" alt="bababooey" src="https://lh3.googleusercontent.com/proxy/cHsmCwlEeVWN55HyND38N4nskrOHiv2iYomdQostJrmD98a1lpaD9OtqkdF59wI-9kn9vlf8PRYS8-QI8dtjp4I4P54K-RcJ1Eq6wGVqbHGNdi29GlMfUVKrLNJUD0fPeQ"
     width="300" height="200">
     </a>
     </div>
