--- a/index.html
+++ b/index.html
@@ -24,33 +24,9 @@
 
     <div style="position: relative; top:300px; text-align: center;">
     <a href="https://komikage.github.io/wiggleman/">
-    <img border="0" alt="bababooey" src="https://lh3.googleusercontent.com/proxy/cHsmCwlEeVWN55HyND38N4nskrOHiv2iYomdQostJrmD98a1lpaD9OtqkdF59wI-9kn9vlf8PRYS8-QI8dtjp4I4P54K-RcJ1Eq6wGVqbHGNdi29GlMfUVKrLNJUD0fPeQ"
+    <img border="0" alt="bababooey" src="https://i.imgur.com/lJVGP8T.png"
     width="300" height="200">
     </a>
     </div>
    
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
-</head>
-</html>
