--- a/index.html
+++ b/index.html
@@ -21,12 +21,21 @@
 
  
  
-
+  <!--boring redirect-->
     <div style="position: relative; top:300px; text-align: center;">
-    <a href="https://komikage.github.io/wiggleman/">
-    <img border="0" alt="bababooey" src="https://i.imgur.com/lJVGP8T.png"
+    <a href="https://komikage.github.io/boring/">
+    <img border="0" alt="bababooey" src="https://i.imgur.com/lJVGP8T.png" 
     width="300" height="200">
     </a>
     </div>
+
+    <!--funny redirect-->
+    <div style="position: absolute; bottom: 0;">
+      <a href="https://komikage.github.io/wiggleman/">
+      <img border="0" alt="bababooey" src="https://i.imgur.com/m8dGoDE.png" 
+      width="180" height="225">
+      </a>
+      </div>
+     
    
 
