--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!--funny redirect-->
     <div style="position: absolute; bottom: 0;">
-      <a href="https://komikage.github.io/wiggleman/">
+      <a href="https://komikage.github.io/red1/">
       <img border="0" alt="bababooey" src="https://i.imgur.com/m8dGoDE.png" 
       width="180" height="225">
       </a>
