--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
       width="180" height="225">
       </a>
       </div>
-     
+
+    <!--funny redirect-->
+    <div style="position: absolute; bottom: 0; right: 0px;">
+      <a href="https://komikage.github.io/JoJo/">
+      <img border="0" alt="bababooey" src="https://i.imgur.com/We2hrS8.png" 
+      width="240" height="425">
+      </a>
+      </div>     
    
 
