--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
       <img border="0" alt="bababooey" src="https://i.imgur.com/We2hrS8.png" 
       width="240" height="425">
       </a>
+      </div>
+      
+    <!--shine-->
+    <div style="position: absolute; top: 10; left: 10px;">
+      <a href="https://komikage.github.io/Shine/">
+      <img border="0" alt="bababooey" src="shine.png" 
+      width="240" height="425">
+      </a>
       </div>     
    
 
