--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <!--boring redirect-->
     <div style="position: relative; top:300px; text-align: center;">
     <a href="https://komikage.github.io/boring/">
-    <img border="0" alt="bababooey" src="https://i.imgur.com/lJVGP8T.png" 
-    width="300" height="200">
+    <img border="0" alt="bababooey" src="nam.png" 
+    width="400" height="200">
     </a>
     </div>
 
@@ -34,7 +34,7 @@
       </div>
       
     <!--shine-->
-    <div style="position: absolute; top: 10; left: 10px;">
+    <div style="position: absolute; top: 25px; left: 25px;">
       <a href="https://komikage.github.io/Shine/">
       <img border="0" alt="bababooey" src="shine.png" 
       width="400" height="100">
