--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
  
  
   <!--boring redirect-->
-    <div style="position: relative; top:300px; text-align: center;">
+    <div style="position: relative; top:25px; left: 25px;">
     <a href="https://komikage.github.io/boring/">
     <img border="0" alt="bababooey" src="nam.png" 
-    width="400" height="200">
+    width="400" height="150">
     </a>
     </div>
 
@@ -34,7 +34,7 @@
       </div>
       
     <!--shine-->
-    <div style="position: absolute; top: 25px; left: 25px;">
+    <div style="position: absolute; top: 300px; text-align: center;">
       <a href="https://komikage.github.io/Shine/">
       <img border="0" alt="bababooey" src="shine.png" 
       width="400" height="100">
