--- a/index.html
+++ b/index.html
@@ -40,5 +40,13 @@
       width="400" height="100">
       </a>
       </div>     
+
+      <!--shine-->
+    <div style="position: relative; top: 25px; right: 25px;">
+      <a href="https://komikage.github.io/sportify/">
+      <img border="0" alt="bababooey" src="sportify.png" 
+      width="400" height="175">
+      </a>
+      </div> 
    
 
