--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
       </div>     
 
       <!--shine-->
-    <div style="position: relative; top: 25px; right: 25px;">
+    <div style="position: absolute; top: 25px; right: 25px;">
       <a href="https://komikage.github.io/sportify/">
       <img border="0" alt="bababooey" src="sportify.png" 
-      width="400" height="175">
+      width="400" height="125">
       </a>
       </div> 
    
